# smartcore-jupyter

./: Cargo.toml  LICENSE  README.md
notebooks/: 00-Env-test.ipynb  01-A-little-bit-about-numbers.ipynb  01-Installing-latest.ipynb  01.01-Statistics.ipynb  01.1-Statistics.ipynb  02-Naive-Gaussian.ipynb  03-LR-example.ipynb  03.00-Logistic-Regression.ipynb  03.01-SVM-classification.ipynb  03.02-SVM-regression.ipynb  04-Trees.ipynb  05-ndarray-bindings.ipynb  98-Trees-API-design-proposal.ipynb  99-Test.ipynb  README.md
src/: main.rs
